--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   tuple: ^2.0.0
   flutter_bloc: ^8.1.1
   equatable: ^2.0.5
+  duration_picker: ^1.0.1
 
 dev_dependencies:
   flutter_test:
