--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,10 @@ dependencies:
   flutter_bloc: ^8.1.1
   equatable: ^2.0.5
   duration_picker: ^1.0.1
+  image_cropper: ^3.0.0
+  image_picker: ^0.8.5+3
+  path_provider: ^2.0.11
+  flutter_image_compress: ^1.1.1
 
 dev_dependencies:
   flutter_test:
