--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,10 +47,17 @@ dependencies:
   image_picker: ^0.8.5+3
   path_provider: ^2.0.11
   flutter_image_compress: ^1.1.1
+  
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.10.0
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "images/hot-pot.png"
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
