--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -80,6 +80,10 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - images/plateBlack.jpg
+    - images/breakfast.png
+    - images/burger.png
+    - images/egg.png
+    - images/soup.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
