--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   image_picker: ^0.8.5+3
   path_provider: ^2.0.11
   flutter_image_compress: ^1.1.1
+  cached_network_image: ^3.2.1
   
 
 dev_dependencies:
