--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,9 @@ dependencies:
   path_provider: ^2.0.11
   flutter_image_compress: ^1.1.1
   cached_network_image: ^3.2.1
+  flutterfire_ui: ^0.4.3+7
+  firebase_auth: ^3.7.0
+  flow_builder: ^0.0.9
   
 
 dev_dependencies:
