--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,10 @@ dependencies:
   flutterfire_ui: ^0.4.3+7
   firebase_auth: ^3.7.0
   flow_builder: ^0.0.9
+  # go_router: ^4.3.0
+  #go_router: 3.1.1
+  provider: ^6.0.3
+  move_to_background: ^1.0.2
   
 
 dev_dependencies:
