--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -88,6 +88,7 @@ flutter:
     - images/burger.png
     - images/egg.png
     - images/soup.png
+    - images/back.jpg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
